--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mern-shopping",
+  "name": "manmiya-artsite",
   "version": "1.0.0",
   "description": "",
   "main": "server/server.js",
@@ -10,6 +10,11 @@
     "seed": "cd server && npm run seed",
     "build": "cd client && npm run build"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Honey-ant/manmiya"
+  },
+
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -17,7 +22,11 @@
     "concurrently": "^5.1.0"
   },
   "dependencies": {
+    "@apollo/client": "^3.4.5",
+    "apollo-server-express": "^3.0.2",
     "@emailjs/browser": "^3.4.0",
-    "stripe": "^8.197.0"
+    "stripe": "^8.197.0",
+    "express": "^4.17.1",
+    "graphql": "^15.5.1"
   }
 }
