--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "manmiya-artsite",
   "version": "1.0.0",
-  "description": "",
+  "description": "A app for selling art",
   "main": "server/server.js",
   "scripts": {
     "start": "node server/server.js",
