--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
   },
   "dependencies": {
     "@apollo/client": "^3.4.5",
-    "apollo-server-express": "^3.0.2",
     "@emailjs/browser": "^3.4.0",
-    "stripe": "^8.197.0",
+    "@ng-bootstrap/ng-bootstrap": "^11.0.0",
+    "apollo-server-express": "^3.0.2",
+    "bootstrap": "^5.1.3",
     "express": "^4.17.1",
-    "graphql": "^15.5.1"
+    "graphql": "^15.5.1",
+    "stripe": "^8.197.0"
   }
 }
