--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server/server.js",
   "proxy": "http://localhost:3001/",
   "scripts": {
-    "start": "node server/server.js && cd client && npm run build",
+    "start": "node server/server.js ",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
     "seed": "cd server && npm run seed ",
