--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ng-bootstrap/ng-bootstrap": "^11.0.0",
     "apollo-server-express": "^3.0.2",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.7.2",
     "express": "^4.17.1",
     "graphql": "^15.5.1",
     "stripe": "^8.197.0"
