--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.17.1",
     "graphql": "^15.5.1",
     "react-dom": "^17.0.2",
+    "react-horizontal-scrolling": "^0.1.8",
     "react-icons": "^4.3.1",
     "stripe": "^8.197.0",
     "styled-components": "^5.3.3"
