--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@apollo/client": "^3.4.5",
     "@emailjs/browser": "^3.4.0",
     "@ng-bootstrap/ng-bootstrap": "^11.0.0",
+    "@stripe/react-stripe-js": "^1.7.0",
+    "@stripe/stripe-js": "^1.23.0",
     "apollo-server-express": "^3.0.2",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.2",
