--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "emailjs-com": "^3.2.0",
     "graphql": "^14.6.0",
     "jwt-decode": "^2.2.0",
+    "mongoose": "^6.2.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
@@ -19,7 +20,8 @@
     "react-scripts": "4.0.2",
     "redux": "^4.0.5",
     "semantic-ui-react": "^2.0.4",
-    "sweetalert2": "^11.3.4"
+    "sweetalert2": "^11.3.4",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
