--- a/package.json
+++ b/package.json
@@ -28,14 +28,18 @@
     "@stripe/react-stripe-js": "^1.7.0",
     "@stripe/stripe-js": "^1.23.0",
     "apollo-server-express": "^3.0.2",
+    "body-parser": "^1.19.2",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.2",
-    "express": "^4.17.1",
+    "cors": "^2.8.5",
+    "express": "^4.17.3",
     "graphql": "^15.5.1",
+    "helmet": "^5.0.2",
     "react-dom": "^17.0.2",
     "react-horizontal-scrolling": "^0.1.8",
     "react-icons": "^4.3.1",
-    "stripe": "^8.203.0",
+    "react-stripe-elements": "^6.1.2",
+    "stripe": "^8.208.0",
     "styled-components": "^5.3.3"
   }
 }
