--- a/package.json
+++ b/package.json
@@ -32,12 +32,15 @@
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "graphql": "^15.5.1",
     "helmet": "^5.0.2",
+    "path": "^0.12.7",
     "react-dom": "^17.0.2",
     "react-horizontal-scrolling": "^0.1.8",
     "react-icons": "^4.3.1",
+    "react-stripe-checkout": "^2.6.3",
     "react-stripe-elements": "^6.1.2",
     "stripe": "^8.208.0",
     "styled-components": "^5.3.3"
