--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-dom": "^17.0.2",
     "react-horizontal-scrolling": "^0.1.8",
     "react-icons": "^4.3.1",
+    "react-multi-carousel": "^2.8.0",
     "react-stripe-checkout": "^2.6.3",
     "react-stripe-elements": "^6.1.2",
     "stripe": "^8.208.0",
